objects/Opportunity_Partner_Snapshot__c/Opportunity_Partner_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Opportunity Partner Snapshot</label>
    <nameField>
        <displayFormat>snap-{0000000}</displayFormat>
        <label>Opportunity Partner Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Partner Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>