objects/Opportunity_Partner_Snapshot__c/fields/Approved_Collaboration_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Approved_Collaboration_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved Collaboration Agreement</label>
    <type>Checkbox</type>
</CustomField>