objects/Opportunity_Partner_Snapshot__c/fields/Collaboration_Agreement_Exists__c.field-meta.xml
<CustomField>
    <fullName>Collaboration_Agreement_Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Collaboration Agreement Exists</label>
    <type>Checkbox</type>
</CustomField>