objects/Opportunity_Partner_Snapshot__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Partner Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Partner_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>