objects/Opportunity_Partner_Snapshot__c/fields/Opportunity_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_Name__c</fullName>
    <label>Opportunity Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>