objects/Opportunity_Partner_Snapshot__c/fields/Opportunity_Partner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Partner</label>
    <referenceTo>Opportunity_Partners__c</referenceTo>
    <relationshipLabel>Opportunity Partner Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Partner_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>