objects/Opportunity_Partner_Snapshot__c/fields/Opportunity_Partner_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Partner_Expiration_Date__c</fullName>
    <label>Opportunity Partner Expiration Date</label>
    <type>Date</type>
</CustomField>