objects/Opportunity_Partner_Snapshot__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>