objects/Opportunity_Partner_Snapshot__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Partner Snapshots</relationshipLabel>
    <relationshipName>Opportunity_Partner_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>