objects/Opportunity_Partner_Snapshot__c/fields/Partner_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Partner_Agreement_Type__c</fullName>
    <formula>TEXT(Opportunity_Partner__r.Collaboration_Agreement__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Agreement Type</label>
    <type>Text</type>
</CustomField>