objects/Opportunity_Partner_Snapshot__c/fields/Partner_Performance__c.field-meta.xml
<CustomField>
    <fullName>Partner_Performance__c</fullName>
    <label>Partner Performance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Over-Performing</fullName>
            </value>
            <value>
                <fullName>Performing</fullName>
            </value>
            <value>
                <fullName>Under-Performing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>